.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Ticket__c/fields/Award_Classification_ID__c.field-meta.xml
<CustomField>
    <fullName>Award_Classification_ID__c</fullName>
    <formula>CASESAFEID(sirenum__TicketType__r.Award_Classification__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Award Classification ID</label>
    <type>Text</type>
</CustomField>