.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Ticket__c/fields/Competency_Category__c.field-meta.xml
<CustomField>
    <fullName>Competency_Category__c</fullName>
    <description>Competency Category for the DLRS.</description>
    <formula>TEXT(sirenum__TicketType__r.Competency_Category__c)</formula>
    <inlineHelpText>Competency Category for the DLRS.</inlineHelpText>
    <label>Competency Category</label>
    <type>Text</type>
</CustomField>