.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Ticket__c/fields/Competency_Id__c.field-meta.xml
<CustomField>
    <fullName>Competency_Id__c</fullName>
    <formula>sirenum__TicketType__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competency Id</label>
    <type>Text</type>
</CustomField>