.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Ticket__c/fields/Competency_Master_Category__c.field-meta.xml
<CustomField>
    <fullName>Competency_Master_Category__c</fullName>
    <formula>IF(sirenum__TicketType__r.Is_Role_Competency__c,
  &apos;Role&apos;,
  &apos;Skill&apos;)

/* previous iteration 
IF(ISBLANK(TEXT(sirenum__TicketType__r.Competency_Category__c)), NULL ,
  IF(TEXT(sirenum__TicketType__r.Competency_Category__c) = &apos;Paypoint&apos;, &apos;Paypoint&apos;,
    IF(TEXT(sirenum__TicketType__r.Competency_Category__c) = &apos;Job Type&apos;, &apos;Role&apos;,
      &apos;Skill&apos;)
  )
)
*/</formula>
    <label>Competency Master Category</label>
    <type>Text</type>
</CustomField>