.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Ticket__c/fields/Competency_Name__c.field-meta.xml
<CustomField>
    <fullName>Competency_Name__c</fullName>
    <description>Competency Name field for the DLRS.</description>
    <formula>sirenum__TicketType__r.Name</formula>
    <inlineHelpText>Competency Name field for the DLRS.</inlineHelpText>
    <label>Competency Name</label>
    <type>Text</type>
</CustomField>