.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Ticket__c/fields/Exclusion__c.field-meta.xml
<CustomField>
    <fullName>Exclusion__c</fullName>
    <formula>ISPICKVAL(sirenum__TicketType__r.Competency_Category__c, &apos;Exclusion&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclusion</label>
    <type>Checkbox</type>
</CustomField>