.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Ticket__c/fields/Exclusion_Note__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_Note__c</fullName>
    <label>Exclusion Note</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>