.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Ticket__c/fields/Exclusion_Type__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_Type__c</fullName>
    <label>Exclusion Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Requested</fullName>
            </value>
            <value>
                <fullName>Candidate Requested</fullName>
            </value>
            <value>
                <fullName>Both Requested</fullName>
            </value>
            <value>
                <fullName>User Requested (internal call)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>