.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Ticket__c/fields/Expires_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Expires_In_Days__c</fullName>
    <description>Number of days to the expiry of this ticket.</description>
    <formula>sirenum__Valid_until__c - TODAY()</formula>
    <inlineHelpText>Number of days to the expiry of this ticket.</inlineHelpText>
    <label>Expires In (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>