.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Ticket__c/fields/Interpretation_Rule_Template_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Interpretation_Rule_Template_Group_ID__c</fullName>
    <formula>CASESAFEID(sirenum__TicketType__r.Interpretation_Template_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interpretation Rule Template Group ID</label>
    <type>Text</type>
</CustomField>