.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Ticket__c/fields/Related_Certificate_Status__c.field-meta.xml
<CustomField>
    <fullName>Related_Certificate_Status__c</fullName>
    <description>The status of the most recent certificate related.</description>
    <inlineHelpText>The status of the most recent certificate related.</inlineHelpText>
    <label>Related Certificate Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>