.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Ticket__c/fields/Role_Competency_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Role_Competency_Ticket__c</fullName>
    <description>This field indicates if this ticket is related to a role competency.</description>
    <formula>sirenum__TicketType__r.Is_Role_Competency__c</formula>
    <inlineHelpText>This field indicates if this ticket is related to a role competency.</inlineHelpText>
    <label>Role Competency Ticket</label>
    <type>Checkbox</type>
</CustomField>