.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Ticket__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>sirenum__Site__c</referenceTo>
    <relationshipLabel>Qualifications</relationshipLabel>
    <relationshipName>Qualifications</relationshipName>
    <type>Lookup</type>
</CustomField>