.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Ticket__c/fields/Skill_Competency_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Skill_Competency_Ticket__c</fullName>
    <description>This field checks if this ticket is related to a Skill Competency.</description>
    <formula>sirenum__TicketType__r.Is_Skill_Competency__c</formula>
    <inlineHelpText>This field checks if this ticket is related to a Skill Competency.</inlineHelpText>
    <label>Skill Competency Ticket</label>
    <type>Checkbox</type>
</CustomField>